Add delete success message

--- a/assets/scripts/templates/question-listing.handlebars
+++ b/assets/scripts/templates/question-listing.handlebars
@@ -9,11 +9,9 @@
    <p>Answer 3: {{answer3}}</p>
    <button type="button" data-id="{{id}}" class="btn btn-danger deleteButton">Delete</button>
    <button type="button" data-id="{{id}}" data-toggle="modal" data-target="#updateQuestion" class="btn btn-default updateButton">Edit</button>
-
-
-
  </div>
 
   {{/each}}
  {{/each}}
+    <div class="statusArea"><strong></strong></div>
 </div>
