--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -28,3 +28,16 @@ body {
 .navbar-left {
   display:none
 }
+
+.panel-heading {
+  background-color: rgba(0, 0, 0, 0);
+  color: #f5f5f5;
+}
+
+.panelSubmit {
+  margin: 20px 20px;
+}
+
+// .btn {
+//   margin-top: 15px;
+// }
