--- a/assets/scripts/templates/question-listing.handlebars
+++ b/assets/scripts/templates/question-listing.handlebars
@@ -8,7 +8,7 @@
    <p>Answer 2: {{answer2}}</p>
    <p>Answer 3: {{answer3}}</p>
    <button type="button" data-id="{{id}}" class="btn btn-danger deleteButton">Delete</button>
-   <button type="button" data-id="{{id}}" data-toggle="modal" data-target="#updateQuestion" class="btn btn-default updateButton">Edit</button>
+   <button type="button" data-id="{{id}}" data-toggle="modal" data-target="#updateQuestionMod" class="btn btn-default updateButton">Edit</button>
  </div>
 
   {{/each}}
